--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -53,3 +53,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "I'm Python. Nice to meet you!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python has a print function\n",
+    "print(\"I'm Python. Nice to meet you!\")  # => I'm Python. Nice to meet you!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm Python. Nice to meet you!\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In Jupyter notebook, result of the last statement or variable \n",
+    "# is automatically printed to the `Out` field.\n",
+    "\n",
+    "\"I'm Python. Nice to meet you!\"  # => I'm Python. Nice to meet you!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Primitive Datatypes and Operators"
+   ]
