--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -91,3 +91,32 @@
    "source": [
     "# 1. Primitive Datatypes and Operators"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number Types\n",
+    "\n",
+    "You have numbers, which can either be integers..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Integer\n",
+    "3  # => 3"
