--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -120,3 +120,33 @@
    "source": [
     "# Integer\n",
     "3  # => 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or floating-point (i.e. floats)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Floats\n",
+    "3.2  # => 3.2"
+   ]
+  },
