Added license file.

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -150,3 +150,37 @@
     "3.2  # => 3.2"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Floats are commonly used in mathematical calculations where it is important to store decimal points in a number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number Operators\n",
+    "\n",
+    "Math is what you would expect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1  # => 2"
