msm: scm: Add scm_call_atomic3

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -268,3 +268,30 @@
      "metadata": {},
      "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "5 / 2  # => 2.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can have integer-division by using `//` instead, where the resulting type is rounded down and kept as int."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
