--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -295,3 +295,37 @@
      "metadata": {},
      "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "5 // 2 # => 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WARNING: This behaviour is swapped around in in Python 2. \n",
+    "\n",
+    "In Python 3 (our version), `/` is normal float-division and `//` is integer-division.\n",
+    "\n",
+    "In Python 2, `/` is integer-division and `//` is float-division."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Modulo operation (remainder of)\n",
