update kotlin version

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -329,3 +329,45 @@
    ],
    "source": [
     "# Modulo operation (remainder of)\n",
+    "7 % 3  # => 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exponentiation (x to the yth power)\n",
+    "2 ** 4  # => 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Enforce precedence with parentheses\n",
