intelli_plug: increase cores on persistence

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -371,3 +371,28 @@
    ],
    "source": [
     "# Enforce precedence with parentheses\n",
+    "(1 + 3) * 2  # => 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean Types and Operator\n",
+    "\n",
+    "A boolean can only take one of two values: `True` or `False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
