--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -425,3 +425,35 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python reserves special keywords **`and`**, **`or`**, and **`not`** for boolean logic:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Note these keywords are case-sensitive\n",
+    "True and False  # => False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`and`** will only evaluate to **`True`** if both input values are **`True`**. If either input values are **`False`** then it will evaluate to **`False`**.\n",
+    "\n",
