--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -457,3 +457,34 @@
    "source": [
     "**`and`** will only evaluate to **`True`** if both input values are **`True`**. If either input values are **`False`** then it will evaluate to **`False`**.\n",
     "\n",
+    "Try changing the above code block to **`True and True`** and press `CTRL+Enter` to re-run the block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False  # => True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`or`** will evaluate to **`True`** if either input values are **`True`**, i.e. only one input value needs to be **`True`**. Only if both input values are **`False`** then it will evaluate to **`False`**.\n",
+    "\n",
+    "Try changing the above code block to **`False or False`** and press `CTRL+Enter` to re-run the block."
+   ]
