Add help command

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -488,3 +488,29 @@
     "\n",
     "Try changing the above code block to **`False or False`** and press `CTRL+Enter` to re-run the block."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True  # => False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
