add search page

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -514,3 +514,36 @@
    "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not False  # => True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`not` simply flips **`True`** to **`False`**, and **`False`** to **`True`**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A quick overview of boolean logic:\n",
+    "\n",
+    "![BooleanLogic](assets/booleanOperators-VennDiagram.png)\n",
+    "\n",
+    "In simple terms, \n",
+    "\n",
+    "- **`and`** checks whether both statements are **`True`**\n",
