md/raid5: Fix CPU hotplug callback registration

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -547,3 +547,39 @@
     "In simple terms, \n",
     "\n",
     "- **`and`** checks whether both statements are **`True`**\n",
+    "- **`or`** checks whether either statements are **`True`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings\n",
+    "\n",
+    "Strings are created with `\"` or `'`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a string.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"This is a string.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
