--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -583,3 +583,42 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is also a string.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'This is also a string.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nMultiline strings can be written\\nusing three \"s, and are often used\\nas comments\\n'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\" \n",
+    "Multiline strings can be written\n",
+    "using three \"s, and are often used\n",
+    "as comments\n",
+    "\"\"\""
+   ]
