add license files

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -622,3 +622,29 @@
     "as comments\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world!'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Strings can be added too!\n",
+    "\"Hello \" + \"world!\"  # => \"Hello world!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
