Pontoon: Update Romanian (ro) localization of AMO

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -648,3 +648,45 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HelloHelloHello'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ... or multiplied\n",
+    "\"Hello\" * 3  # => \"HelloHelloHello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can find the length of a string\n",
+    "len(\"This is a string\")  # => 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
