--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -690,3 +690,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### String Formatting\n",
+    "\n",
+    "You can build a new string from existing template strings using either the keyword `%` or the method `format`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The items in the basket are apples and lemons'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# String formatting with %\n",
+    "x = 'apples'\n",
+    "y = 'lemons'\n",
