--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -715,3 +715,43 @@
     "# String formatting with %\n",
     "x = 'apples'\n",
     "y = 'lemons'\n",
+    "z = \"The items in the basket are %s and %s\" % (x, y)\n",
+    "\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a placeholder'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A newer way to format strings is the `format` method.\n",
+    "# This method is the preferred way\n",
+    "\"{} is a {}\".format(\"This\", \"placeholder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bob wants to eat lasagna'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
