--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -755,3 +755,31 @@
      },
      "execution_count": 29,
      "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also use keywords in format strings.\n",
+    "\"{name} wants to eat {food}\".format(name=\"Bob\", food=\"lasagna\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### None\n",
+    "\n",
+    "Null type in Python is represented using the keyword `None`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# None is an object\n",
+    "None  # => None"
+   ]
