--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -783,3 +783,35 @@
     "# None is an object\n",
     "None  # => None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Don't use the equality \"==\" symbol to compare objects to None\n",
+    "# Use \"is\" instead\n",
+    "\"etc\" is None  # => False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
