--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -815,3 +815,24 @@
      "data": {
       "text/plain": [
        "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "None is None  # => True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'is' operator tests for object identity. This isn't very useful when dealing with primitive values, but is very useful when dealing with objects."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
