qcom-cpufreq: Restore CPU frequency during resume

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -836,3 +836,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 2. Variables and Collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No need to declare variables before assigning to them.\n",
+    "some_var = 5  # Convention is to use lower_case_with_underscores\n",
+    "some_var  # => 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'some_other_var' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
