--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -911,3 +911,25 @@
    "source": [
     "# Lists store sequences\n",
     "li = []\n",
+    "\n",
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can start with a prefilled list\n",
