Add localversion-wireless to identify builds from this tree.

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -933,3 +933,34 @@
    ],
    "source": [
     "# You can start with a prefilled list\n",
+    "other_li = [4, 5, 6]\n",
+    "\n",
+    "other_li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add stuff to the end of a list with append\n",
+    "li = []\n",
+    "li.append(1)  # li is now [1]\n",
+    "li.append(2)  # li is now [1, 2]\n",
+    "li.append(3)  # li is now [1, 2, 3]\n",
+    "li.append(4)  # li is now [1, 2, 3, 4]\n",
+    "\n",
+    "li"
+   ]
