sched: Add missing call to calc_load_exit_idle()

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -964,3 +964,38 @@
     "\n",
     "li"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Access a list like you would any array\n",
+    "li[0]  # => 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that Python using 0-based indexing, i.e. sequence index starts with 0 instead of 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
