Updated language files

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -999,3 +999,45 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assign new values to indexes that have already been initialized with =\n",
+    "li[0] = 42\n",
+    "li[0]  # => 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[42, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li # => [42, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
