--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1041,3 +1041,31 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li[0] = 1  # Note: setting it back to the original value\n",
+    "li[0]  # => 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
