--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1069,3 +1069,33 @@
      },
      "execution_count": 42,
      "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li # => [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Look at the last element\n",
+    "li[-1]  # => 4"
+   ]
+  },
+  {
+   "cell_type": "code",
