--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1129,3 +1129,38 @@
       "text/plain": [
        "[2, 3]"
       ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can look at ranges with slice syntax.\n",
+    "# li[x:y] means get elements at index x all through to index y-1\n",
+    "li[1:3]  # => [2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can slice to the end of the list by leaving out the index following the colon\n",
+    "li[2:]  # => [3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
