--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1197,3 +1197,36 @@
      "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for existence in a list with \"in\"\n",
+    "1 in li  # => True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Examine the length with \"len()\"\n",
+    "len(li)  # => 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary (associative array or hashmap in other languages)"
