--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1230,3 +1230,31 @@
    "metadata": {},
    "source": [
     "## Dictionary (associative array or hashmap in other languages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dictionaries store mappings\n",
+    "empty_dict = {}\n",
+    "\n",
+    "empty_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
