Configure Travis CI

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1258,3 +1258,28 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 1, 'three': 3, 'two': 2}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Here is a prefilled dictionary\n",
+    "filled_dict = {\"one\": 1, \"two\": 2, \"three\": 3}\n",
+    "\n",
+    "filled_dict # note that dictionary ordering is not guaranteed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
