--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1283,3 +1283,35 @@
    "execution_count": 52,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Look up values with []\n",
+    "filled_dict[\"one\"]  # => 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['one', 'two', 'three'])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
