--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1315,3 +1315,39 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Get all keys as a list with \"keys()\"\n",
+    "filled_dict.keys()  # => dict_keys(['one', 'two', 'three'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note - Dictionary key ordering is not necessarily guaranteed. Your results might not match this exactly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([1, 2, 3])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all values as a list with \"values()\"\n",
+    "filled_dict.values()  # => dict_values([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
