Remove unneeded dependencies

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1351,3 +1351,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Note - Same as above regarding key ordering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('one', 1), ('two', 2), ('three', 3)])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all key-value pairs as a list of tuples with \"items()\"\n",
+    "filled_dict.items()  # => dict_items([('one', 1), ('two', 2), ('three', 3)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
