--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1382,3 +1382,38 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for existence of keys in a dictionary with \"in\"\n",
+    "\"one\" in filled_dict  # => True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 in filled_dict  # => False"
+   ]
+  },
