--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1469,3 +1469,47 @@
    "outputs": [],
    "source": [
     "filled_dict.get(\"four\")  # => None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The get method supports a default argument when the value is missing\n",
+    "filled_dict.get(\"one\", 4)  # => 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filled_dict.get(\"four\", 4)  # => 4"
+   ]
+  },
+  {
