--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1513,3 +1513,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# note that get doesn't set the value in the dictionary, hence\n",
+    "filled_dict.get(\"four\") # is still => None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set the value of a key with a syntax similar to lists\n",
+    "filled_dict[\"four\"] = 4  # now, filled_dict[\"four\"] => 4\n",
+    "\n",
+    "filled_dict[\"four\"]"
+   ]
+  },
