--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1547,3 +1547,41 @@
     "filled_dict[\"four\"]"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Control Flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Let's just make a variable\n",
+    "some_var = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some_var is smaller than 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here is an if statement. Indentation is significant in python!\n",
+    "# prints \"some_var is smaller than 10\"\n",
+    "if some_var > 10:\n",
+    "    print(\"some_var is totally bigger than 10.\")\n",
+    "elif some_var < 10:  # This elif clause is optional.\n",
