--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1585,3 +1585,30 @@
     "if some_var > 10:\n",
     "    print(\"some_var is totally bigger than 10.\")\n",
     "elif some_var < 10:  # This elif clause is optional.\n",
+    "    print(\"some_var is smaller than 10.\")\n",
+    "else:  # This is optional too.\n",
+    "    print(\"some_var is indeed 10.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog is a mammal\n",
+      "cat is a mammal\n",
+      "mouse is a mammal\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "For loops iterate over lists\n",
+    "prints:\n",
+    "    dog is a mammal\n",
+    "    cat is a mammal\n",
+    "    mouse is a mammal\n",
