--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1612,3 +1612,43 @@
     "    dog is a mammal\n",
     "    cat is a mammal\n",
     "    mouse is a mammal\n",
+    "\"\"\"\n",
+    "for animal in [\"dog\", \"cat\", \"mouse\"]:\n",
+    "    # You can use {} to interpolate formatted strings. (See above.)\n",
+    "    print(\"{} is a mammal\".format(animal))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\"range(number)\" returns a list of numbers\n",
+    "from zero to the given number\n",
+    "prints:\n",
+    "    0\n",
+    "    1\n",
+    "    2\n",
+    "    3\n",
+    "\"\"\"\n",
+    "for i in range(4):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
