xhci: Switch PPT ports to EHCI on shutdown.

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1652,3 +1652,34 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\"range(lower, upper)\" returns a list of numbers\n",
+    "from the lower number to the upper number\n",
+    "prints:\n",
+    "    4\n",
+    "    5\n",
+    "    6\n",
+    "    7\n",
+    "\"\"\"\n",
+    "for i in range(4, 8):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
