--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1683,3 +1683,40 @@
    "execution_count": 70,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "While loops go until a condition is no longer met.\n",
+    "prints:\n",
+    "    0\n",
+    "    1\n",
+    "    2\n",
+    "    3\n",
+    "\"\"\"\n",
+    "x = 0\n",
+    "while x < 4:\n",
+    "    print(x)\n",
+    "    x += 1  # Shorthand for x = x + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We can clean up resources here\n"
+     ]
