--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1720,3 +1720,25 @@
      "text": [
       "We can clean up resources here\n"
      ]
+    }
+   ],
+   "source": [
+    "# Handle exceptions with a try/except block\n",
+    "\n",
+    "try:\n",
+    "    # Use \"raise\" to raise an error\n",
+    "    raise IndexError(\"This is an index error\")\n",
+    "except IndexError as e:\n",
+    "    pass  # Pass is just a no-op. Usually you would do recovery here.\n",
+    "except (TypeError, NameError):\n",
+    "    pass  # Multiple exceptions can be handled together, if required.\n",
+    "else:  # Optional clause to the try/except block. Must follow all except blocks\n",
+    "    print(\"All good!\")  # Runs only if the code in try raises no exceptions\n",
+    "finally:  # Execute under all circumstances\n",
+    "    print(\"We can clean up resources here\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
