--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1742,3 +1742,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 4. Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Use \"def\" to create new functions\n",
+    "def add(x, y):\n",
+    "    print(\"x is {} and y is {}\".format(x, y))\n",
+    "    return x + y  # Return values with a return statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is 5 and y is 6\n"
