more test cleanup

--- a/IntroductionToPython.ipynb
+++ b/IntroductionToPython.ipynb
@@ -1769,3 +1769,28 @@
      "output_type": "stream",
      "text": [
       "x is 5 and y is 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calling functions with parameters\n",
+    "add(5, 6)  # => prints out \"x is 5 and y is 6\" and returns 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
